Update docs for OpenRewrite 8.85.0 (#515)
* Update docs for OpenRewrite 8.85.0

* Escape unbalanced angle brackets in 8.85.0 changelog for MDX